# habit-tracker

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  habittracker.db  pyproject.toml  seed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2867196b2955_fix_unique_constraint_for_habit_.py  2dff08cdcd78_add_unique_constraint_for_habit_.py  9b2b4da698b4_add_user_preferences_table.py  ae6e6457e90c_create_initial_tables_for_habits_and_.py
frontend/: app.js  index.html  style.css
habittracker/: analytics.py  api.py  app.py  database.py  models.py  serializers.py  services.py
tests/: conftest.py  test_analytics.py  test_api.py  test_app.py  test_app_factory.py  test_initial.py  test_models.py  test_services.py
